# DriftAI

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  run.sh
src/driftai/: __init__.py
src/driftai/audio/: __init__.py  recorder.py
src/driftai/config/: __init__.py  audio_config.py  config_loader.py  logger_config.py  stt_config.py  tts_config.py
src/driftai/data/: config.json
src/driftai/data/logs/: README.md
src/driftai/models/: status.py
src/driftai/models/speech2text/: __init__.py  client.py  data_models.py  transcription.py
src/driftai/models/text2speech/: __init__.py  speech_engine.py
src/driftai/models/text2speech/kokoro/: ACKNOWLEDGEMENT
src/driftai/server/: job_manager.py  stt_server.py
src/driftai/server/routes/: stt.py
src/driftai/server/tasks/: stt_tasks.py
src/driftai/stt/: __init__.py  client.py  data_models.py  server.py  stt_server.py  transcription.py
src/driftai/tests/: __init__.py  config_test.py  floating_window_test.py  logger_test.py  recorder_test.py  speech_engine_test.py  stt_client_app.py
src/driftai/ui/: __init__.py  animation.py  audio_recorder_app.py  audio_visualizer_widget.py  chat_widget.py  floating_window.py  mic_input_ui.py  opengl_3d_visualizer_widget.py
src/driftai/ui/audio_input_widget/: __init__.py  thread_recorder.py  visualizer_widget.py  widget.py
src/driftai/ui/xml/: audio_input_widget_ui.ui  chat_ui.ui  floating_window_ui.ui
src/driftai/utils/: __init__.py  file_io.py  logger.py  path_manager.py
