[project]
name = "driftai"
version = "0.1.0"
description = "An LLM powered Open Source AI assistant designed to speed up day-to-day tasks of a PC user."
readme = "README.md"
authors = [
    { name = "MahirHamiAbrar", email = "mhabrarmts@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
driftai = "driftai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
