[project]
name = "driftai"
version = "0.1.0"
description = "An LLM powered Open Source AI assistant designed to speed up day-to-day tasks of a PC user."
readme = "README.md"
authors = [
    { name = "MahirHamiAbrar", email = "mhabrarmts@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pynput>=1.8.0",
    "pyopengl>=3.1.9",
    "pyqt6>=6.8.1",
]

[project.scripts]
driftai = "driftai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
